Update Comp Methods Jakree.tex

--- a/Comp Methods Jakree.tex
+++ b/Comp Methods Jakree.tex
@@ -19,10 +19,10 @@
 \usepackage{sectsty}
 \allsectionsfont{\sffamily\mdseries\upshape} 
 
-\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
-\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
+\usepackage[nottoc,notlof,notlot]{tocbibind}
+\usepackage[titles,subfigure]{tocloft}
 \renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
-\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
+\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} 
 
 \setlength{\parindent}{4em}
 \setlength{\parskip}{1em}
@@ -31,8 +31,6 @@
 
 \title{Brief Article}
 \author{The Author}
-%\date{} % Activate to display a given date or no date (if empty),
-         % otherwise the current date is printed 
 
 
 \author{Jakree Koosakul}
@@ -59,15 +57,15 @@ The results under the different assumptions are shown in Table 1. Overall, the e
 
 \begin{table} 
 \centering 
-\caption{MPC under Different Mortality Assumptions} % Table caption, can be commented out if no caption is required
-\begin{tabular}{l c c c} % The final bracket specifies the number of columns in the table along with left and right borders which are specified using vertical pipes (|); each column can be left, right or center-justified using l, r or c. Columns will widen to hold the content in them by default, to specify a precise width, use p{width}, e.g. p{5cm}
-\toprule % Top horizontal line
-& \multicolumn{3}{c}{\textbf{MPC}} \\ % Amalgamating several columns into one cell is done using the \multicolumn command with the number of columns to amalgamate as the first argument and then the justification (l, r or c)
-\cmidrule(l){2-4} % Horizontal line spanning less than the full width of the table - you can add (r) or (l) just before the opening curly bracket to shorten the rule on the left or right side
-\textbf{Wealth Measure} & US2010 & JP1947 & JP2016 \\ % Column names row
-\midrule % In-table horizontal line
+\caption{MPC under Different Mortality Assumptions} 
+\begin{tabular}{l c c c} 
+\toprule 
+& \multicolumn{3}{c}{\textbf{MPC}} \\ 
+\cmidrule(l){2-4} 
+\textbf{Wealth Measure} & US2010 & JP1947 & JP2016 \\ 
+\midrule 
 Overal average & 0.16  & 0.12 & 0.16  \\ 
-\midrule % In-table horizontal line
+\midrule 
 By wealth/permanent income ratio \\ 
  Top 1\% & 0.09 & 0.11 & 0.08 \\ 
  Top 10\% & 0.10 & 0.11 & 0.09 \\ 
@@ -76,7 +74,7 @@ By wealth/permanent income ratio \\
  Top 40-60\% & 0.08 & 0.07 & 0.08 \\ 
  Top 60-80\% & 0.15 & 0.08 & 0.12 \\ 
  Bottom 20\% & 0.41 & 0.26 & 0.40 \\ 
-\midrule % In-table horizontal line
+\midrule 
 By income \\ 
  Top 1\% & 0.10 & 0.08 & 0.11 \\ 
  Top 10\% & 0.12 & 0.09 & 0.12 \\ 
@@ -85,16 +83,16 @@ By income \\
  Top 40-60\% & 0.16 & 0.12 & 0.16 \\ 
  Top 60-80\% & 0.15 & 0.13 & 0.16 \\ 
  Bottom 20\% & 0.18 & 0.15 & 0.18 \\ 
-\midrule % In-table horizontal line
+\midrule 
 By employment status
  Employed & 0.13 & 0.10 & 0.13  \\ 
  Unemployed & 0.18 & 0.12 & 0.20 \\ 
-\midrule % In-table horizontal line
+\midrule 
  Lorenz Distance & 16.03 & 23.15 & 17.11  \\ 
-\bottomrule % Bottom horizontal line
+\bottomrule 
 \end{tabular}
 
-\label{tab:template} % A label for referencing this table elsewhere, references are used in text as \ref{label}
+\label{tab:template} 
 \end{table}
 
 \section{Code Modification on HARK}
